--- a/front/sass/base/_base.scss
+++ b/front/sass/base/_base.scss
@@ -25,7 +25,7 @@ html {
  * Basic styles for links
  */
 a {
-  color: $brand-color;
+  color: $red-color;
   text-decoration: none;
 
   @include on-event {
